--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
 <html>
-aaaaa
+<head>
+<meta charset="UTF-8">
+<title>TipsNote : GitHub Pages Sample</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/marx/3.0.7/marx.css">
+</head>
+
+<body>
+<main>
+  <h1>GitHub Pages のサンプルですyo</h1>
+  <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
+  <a href="https://www.google.com/?hl=ja"><button>Google</button></a>
+</main>
+
+<script>
+console.log('GitHub Pages Sample');
+</script>
+</body>
 </html>
