--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>TipsNote : GitHub Pages Sample</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/marx/3.0.7/marx.css">
+  <meta charset="UTF-8">
+  <title>TipsNote : GitHub Pages Sample</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/marx/3.0.7/marx.css">
 </head>
 
 <body>
-<main>
-  <h1>GitHub Pages のサンプルですyo</h1>
-  <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
-  <a href="https://www.google.com/?hl=ja"><button>Google</button></a>
-</main>
+  <main>
+    <h1>GitHub Pages のサンプルですyo</h1>
+    <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
+    <a href="https://www.google.com/?hl=ja"><button>Google</button></a>
+    <a href="https://www.google.com/?hl=ja"><button>Google2</button></a>
 
-<script>
-console.log('GitHub Pages Sample');
-</script>
+  </main>
+
+  <script>
+    console.log('GitHub Pages Sample');
+  </script>
 </body>
+
 </html>
