--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
     <a href="https://www.google.com/?hl=ja"><button>Google</button></a>
     <a href="https://www.google.com/?hl=ja"><button>Google2</button></a>
-
+    <a href="https://www.google.com/?hl=ja"><button>Google3</button></a>
   </main>
 
   <script>
