--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 
 <body>
   <main>
-    <h1>GitHub Pages のサンプルですyo</h1>
-    <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
-    <a href="https://www.google.com/?hl=ja"><button>Google</button></a>
-    <a href="https://www.google.com/?hl=ja"><button>Google2</button></a>
-    <a href="https://www.google.com/?hl=ja"><button>Google3</button></a>
-   test
+    <h1>GitHub Pages</h1>
+    <button>test</button>
   </main>
 
   <script>
