--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }
         return (
           <div class="mt-5" style={{ height: '100vh' }}>
-            <p style={{ fontSize: "3em" }} class="d-flex justify-content-center">J</p>
+            <p style={{ fontSize: "3em" }} class="d-flex justify-content-center">Juji</p>
             <div>
               main
               <p class="d-flex justify-content-center">setting date: {D}</p>
