--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
             <p style={{ fontSize: "3em" }} class="d-flex justify-content-center">Juji</p>
             <div>
               main
-              <p class="d-flex justify-content-center">setting date: {D}</p>
-              <p class="d-flex justify-content-center test">last {this.state.time} seconds</p>
+              <p class="d-flex justify-content-center">Setting date: {D}</p>
+              <p class="d-flex justify-content-center test">Last {this.state.time} seconds</p>
             </div>
 
             <div>
               sub
-              <p class="d-flex justify-content-center">last {time.diff(moment(), 'minutes')} minutes</p>
-              <p class="d-flex justify-content-center">last {time.diff(moment(), 'days')} days</p>
-              <p class="d-flex justify-content-center">last {time.diff(moment(), 'months')} months</p>
+              <p class="d-flex justify-content-center">Last {time.diff(moment(), 'minutes')} minutes</p>
+              <p class="d-flex justify-content-center">Last {time.diff(moment(), 'days')} days</p>
+              <p class="d-flex justify-content-center">Last {time.diff(moment(), 'months')} months</p>
             </div>
 
           </div>
