--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </style>
 </head>
 
-<body>
+<body style='background: #EBDEF0;'>
   <div id="root" class="container"></div>
 
   <script type="text/babel">
