--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </style>
 </head>
 
-<body style='background: #EBDEF0;'>
+<body style='background: #EBDEF0; background: linear-gradient(#EBDEF0,#E2B0FF);'>
   <div id="root" class="container"></div>
 
   <script type="text/babel">
