--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           node.addEventListener('animationend', handleAnimationEnd)
         }
         return (
-          <div class="mt-5" style={{ height: '100vh' }}>
+          <div class="mt-5">
             <p style={{ fontSize: "3em" }} class="d-flex justify-content-center">Juji</p>
             <div>
               main
