--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </style>
 </head>
 
-<body style='background: #EBDEF0; background: linear-gradient(#EBDEF0,#E2B0FF);'>
+<body style='background: linear-gradient(#EBDEF0,#E2B0FF);'>
   <div id="root" class="container"></div>
 
   <script type="text/babel">
@@ -70,7 +70,7 @@
         }
         return (
           <div class="mt-5">
-            <p style={{ fontSize: "3em" }} class="d-flex justify-content-center">Juji</p>
+            <p style={{ fontSize: "3em" }} class="d-flex justify-content-center">Jujiiiieeee</p>
             <div>
               main
               <p class="d-flex justify-content-center">Setting date: {D}</p>
