--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
       font-size: 65px;
     }
   </style>
+
 </head>
 
 <body style='background: linear-gradient(#EBDEF0,#E2B0FF);'>
+  <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
+  <script>bubbly({
+      colorStart: "#EBDEF0",
+      colorStop: "#E2B0FF",
+    });
+  </script>
+
   <div id="root" class="container"></div>
 
   <script type="text/babel">
