--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body style='background: linear-gradient(#EBDEF0,#E2B0FF);'>
+<body>
   <div id="root" class="container"></div>
 
   <script type="text/babel">
@@ -59,8 +59,8 @@
 
       render() {
         return (
-          <div class="mt-5">
-            <p style={{ fontSize: "3em" }} class="d-flex justify-content-center">Jujiiiieeee</p>
+          <div style={{ marginTop: '20vh' }}>
+            <p style={{ fontSize: "4em" }} class="d-flex justify-content-center">Jujiiiieeee</p>
 
             <ul class="nav nav-pills nav-fill">
               <li class="nav-item">
