--- a/index.html
+++ b/index.html
@@ -5,25 +5,19 @@
   <meta charset="UTF-8">
   <title>J</title>
   <link rel="shortcut icon" href="./c_j.ico">
-  <script crossorigin src=" https://unpkg.com/react@16/umd/react.production.min.js">
-  </script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+
+  <!-- react CDN -->
+  <script crossorigin src=" https://unpkg.com/react/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+  <!-- bootstrap CDN -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
   <style>
     body {
@@ -35,13 +29,17 @@
 </head>
 
 <body>
-  <div id="root" class="container"></div>
 
+  <div id="root"></div>
   <script type="text/babel">
     const D = "2021-04-01";
     const nextMeet = "2020-04-11";
     let time = moment(D)
     let time_tmp = moment(nextMeet)
+    const Container = ReactBootstrap.Container
+    const Tabs = ReactBootstrap.Tabs
+    const Tab = ReactBootstrap.Tab
+
     class MyComponent extends React.Component {
       constructor(props) {
         super(props);
@@ -59,39 +57,32 @@
 
       render() {
         return (
-          <div style={{ marginTop: '20vh' }}>
+          <Container style={{ marginTop: '20vh' }}>
             <p style={{ fontSize: "4em" }} class="d-flex justify-content-center">Jujiiiieeee</p>
 
-            <ul class="nav nav-pills nav-fill">
-              <li class="nav-item">
-                <a href="#tab1" class="nav-link active" data-toggle="tab">next meet</a>
-              </li>
-              <li class="nav-item">
-                <a href="#tab2" class="nav-link" data-toggle="tab">time to be with J</a>
-              </li>
-            </ul>
-
-            <div class="tab-content" style={{ fontSize: '1.5em' }}>
-              <div id="tab1" class="tab-pane active">
+            <Tabs variant="pills" defaultActiveKey="tab1" fill>
+              <Tab style={{ fontSize: '1.5em' }} eventKey="tab1" title="next meet">
                 <p class="d-flex justify-content-center">date: {nextMeet}</p>
                 <p class="d-flex justify-content-center test">{this.state.time_tmp} sec</p>
                 <p class="d-flex justify-content-center">{time_tmp.diff(moment(), 'days')} days</p>
-              </div>
-              <div id="tab2" class="tab-pane">
+              </Tab>
+              <Tab style={{ fontSize: '1.5em' }} eventKey="tab2" title="time to be with J">
                 <p class="d-flex justify-content-center">date: {D}</p>
                 <p class="d-flex justify-content-center test">{this.state.time} sec</p>
                 <p class="d-flex justify-content-center">{time.diff(moment(), 'minutes')} min</p>
                 <p class="d-flex justify-content-center">{time.diff(moment(), 'days')} days</p>
                 <p class="d-flex justify-content-center">{time.diff(moment(), 'months')} months</p>
-              </div>
-            </div>
+              </Tab>
+            </Tabs>
+          </Container>
 
-          </div>
         )
       }
     }
     ReactDOM.render(<MyComponent />, document.getElementById('root'))
   </script>
+
+  <script crossorigin src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
   <script>bubbly({
