--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <Container style={{ marginTop: '20vh' }}>
             <p style={{ fontSize: "4em" }} class="d-flex justify-content-center">Jujiiiieeee</p>
 
-            <Tabs variant="pills" defaultActiveKey="tab1" fill>
+            <Tabs variant="pills" defaultActiveKey="tab1" fill transition={false}>
               <Tab style={{ fontSize: '1.5em' }} eventKey="tab1" title="next meet">
                 <p class="d-flex justify-content-center">date: {nextMeet}</p>
                 <p class="d-flex justify-content-center test">{this.state.time_tmp} sec</p>
