--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     const Container = ReactBootstrap.Container
     const Tabs = ReactBootstrap.Tabs
     const Tab = ReactBootstrap.Tab
-
+    const arr = ['seconds', 'minutes', 'hours', 'days', 'weeks', 'months']
     class MyComponent extends React.Component {
       constructor(props) {
         super(props);
@@ -54,15 +54,15 @@
             <Tabs variant="pills" defaultActiveKey="tab1" fill transition={false}>
               <Tab style={{ fontSize: '1.5em' }} eventKey="tab1" title="next meet">
                 <p class="d-flex justify-content-center">date: {nextMeet}</p>
-                <p class="d-flex justify-content-center test">{this.state.time_tmp} sec</p>
-                <p class="d-flex justify-content-center">{time_tmp.diff(moment(), 'days')} days</p>
+                {arr.map(d => {
+                  return <p class="d-flex justify-content-center">{time_tmp.diff(moment(), d)} {d}</p>
+                })}
               </Tab>
               <Tab style={{ fontSize: '1.5em' }} eventKey="tab2" title="time to be with J">
                 <p class="d-flex justify-content-center">date: {D}</p>
-                <p class="d-flex justify-content-center test">{this.state.time} sec</p>
-                <p class="d-flex justify-content-center">{time.diff(moment(), 'minutes')} min</p>
-                <p class="d-flex justify-content-center">{time.diff(moment(), 'days')} days</p>
-                <p class="d-flex justify-content-center">{time.diff(moment(), 'months')} months</p>
+                {arr.map(d => {
+                  return <p class="d-flex justify-content-center">{time.diff(moment(), d)} {d}</p>
+                })}
               </Tab>
             </Tabs>
           </Container>
