--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     const Tabs = ReactBootstrap.Tabs
     const Tab = ReactBootstrap.Tab
     const arr = ['seconds', 'minutes', 'hours', 'days', 'weeks', 'months']
+    const ANIME = ['bounce', 'flash', 'pulse', 'rubberBand', 'shake', 'headShake', 'swing', 'tada', 'wobble', 'jello', 'bounceIn', 'bounceInDown', 'bounceInLeft', 'bounceInRight', 'bounceInUp', 'bounceOut', 'bounceOutDown', 'bounceOutLeft', 'bounceOutRight', 'bounceOutUp', 'fadeIn', 'fadeInDown', 'fadeInDownBig', 'fadeInLeft', 'fadeInLeftBig', 'fadeInRight', 'fadeInRightBig', 'fadeInUp', 'fadeInUpBig', 'fadeOut', 'fadeOutDown', 'fadeOutDownBig', 'fadeOutLeft', 'fadeOutLeftBig', 'fadeOutRight', 'fadeOutRightBig', 'fadeOutUp', 'fadeOutUpBig', 'flipInX', 'flipInY', 'flipOutX', 'flipOutY', 'lightSpeedIn', 'lightSpeedOut', 'rotateIn', 'rotateInDownLeft', 'rotateInDownRight', 'rotateInUpLeft', 'rotateInUpRight', 'rotateOut', 'rotateOutDownLeft', 'rotateOutDownRight', 'rotateOutUpLeft', 'rotateOutUpRight', 'hinge', 'jackInTheBox', 'rollIn', 'rollOut', 'zoomIn', 'zoomInDown', 'zoomInLeft', 'zoomInRight', 'zoomInUp', 'zoomOut', 'zoomOutDown', 'zoomOutLeft', 'zoomOutRight', 'zoomOutUp', 'slideInDown', 'slideInLeft', 'slideInRight', 'slideInUp', 'slideOutDown', 'slideOutLeft', 'slideOutRight', 'slideOutUp', 'heartBeat']
+    const RANDOM_ANIME = ANIME[Math.floor(Math.random() * ANIME.length)]
+
     class MyComponent extends React.Component {
       constructor(props) {
         super(props)
@@ -49,20 +52,16 @@
       render() {
         return (
           <Container style={{ marginTop: '20vh' }}>
-            <p style={{ fontSize: "4em" }} class="d-flex justify-content-center animated tada">Jujiiiieeee</p>
+            <p style={{ fontSize: "4em" }} class={`d-flex justify-content-center animated ${RANDOM_ANIME}`}>Jujiiiieeee</p>
 
             <Tabs variant="pills" defaultActiveKey="tab1" fill transition={false}>
               <Tab style={{ fontSize: '1.5em' }} eventKey="tab1" title="next meet">
                 <p class="d-flex justify-content-center">date: {NEXT_MEET}</p>
-                {arr.map(d => {
-                  return <p class="d-flex justify-content-center">{time_tmp.diff(moment(), d)} {d}</p>
-                })}
+                {arr.map(d => { return <p class="d-flex justify-content-center">{time_tmp.diff(moment(), d)} {d}</p> })}
               </Tab>
               <Tab style={{ fontSize: '1.5em' }} eventKey="tab2" title="time to be with J">
                 <p class="d-flex justify-content-center">date: {D}</p>
-                {arr.map(d => {
-                  return <p class="d-flex justify-content-center">{time.diff(moment(), d)} {d}</p>
-                })}
+                {arr.map(d => { return <p class="d-flex justify-content-center">{time.diff(moment(), d)} {d}</p> })}
               </Tab>
             </Tabs>
 
