--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
     const ANIME = ['bounce', 'flash', 'pulse', 'rubberBand', 'shake', 'headShake', 'swing', 'tada', 'wobble', 'jello', 'bounceIn', 'bounceInDown', 'bounceInLeft', 'bounceInRight', 'bounceInUp', 'fadeIn', 'fadeInDown', 'fadeInDownBig', 'fadeInLeft', 'fadeInLeftBig', 'fadeInRight', 'fadeInRightBig', 'fadeInUp', 'fadeInUpBig', 'flipInX', 'flipInY', 'lightSpeedIn', 'rotateIn', 'rotateInDownLeft', 'rotateInDownRight', 'rotateInUpLeft', 'rotateInUpRight', 'hinge', 'jackInTheBox', 'rollIn', 'zoomIn', 'zoomInDown', 'zoomInLeft', 'zoomInRight', 'zoomInUp', 'slideInDown', 'slideInLeft', 'slideInRight', 'slideInUp', 'heartBeat']
     const RANDOM_ANIME = ANIME[Math.floor(Math.random() * ANIME.length)]
 
+    const styleFunc = (time , d)=>{
+      let style 
+      if(time.diff(moment(), d) === 0) style = "d-flex justify-content-center text-primary" 
+      else style = "d-flex justify-content-center"                  
+      return style
+    }
+    const First = (props)=> {
+      return <div>
+                <p style={{ fontSize: '1.5em' }} class="d-flex justify-content-center">{props.title}</p>
+                <p class="d-flex justify-content-center">date: {props.date}</p>
+            </div>
+    }
     class MyComponent extends React.Component {
       constructor(props) {
         super(props)
@@ -63,27 +75,16 @@
                     return <p class="d-flex justify-content-center text-danger animated tada infinite">Last One Day!!!!!!!!!</p>;
                   }
                 })()}
-                <p style={{ fontSize: '1.5em' }} class="d-flex justify-content-center">NEXT MEET</p>
-                <p class="d-flex justify-content-center">date: {NEXT_MEET}</p>
-                {arr.map(d => { 
-                  let style 
-                  if(time_tmp.diff(moment(), d) === 0) style = "d-flex justify-content-center text-primary" 
-                  else style = "d-flex justify-content-center"                  
-                  return <p class={style}>{time_tmp.diff(moment(), d)} {d}</p> })}
+                <First title="NEXT MEET" date={NEXT_MEET} />
+                {arr.map(d => { return <p class={styleFunc(time_tmp, d)}>{time_tmp.diff(moment(), d)} {d}</p>})}
               </Tab>
               <Tab style={{ fontSize: '1.5em' }} eventKey="tab2" title="2">
-                <p style={{ fontSize: '1.5em' }} class="d-flex justify-content-center">2 YEARS</p>
-                <p class="d-flex justify-content-center">date: {TWO_YEARS}</p>
-                {arr.map(d => { return <p class="d-flex justify-content-center">{time_two_years.diff(moment(), d)} {d}</p> })}
+                <First title="2 YEARS" date={TWO_YEARS} />
+                {arr.map(d => { return <p class={styleFunc(time_two_years, d)}>{time_two_years.diff(moment(), d)} {d}</p>})}
               </Tab>
               <Tab style={{ fontSize: '1.5em' }} eventKey="tab3" title="3">
-                <p style={{ fontSize: '1.3em' }} class="d-flex justify-content-center">TIME 2 B WITH J</p>
-                <p class="d-flex justify-content-center">date: {D}</p>
-                {arr.map(d => {
-                  let style 
-                  if(time.diff(moment(), d) === 0) style = "d-flex justify-content-center text-info" 
-                  else style = "d-flex justify-content-center"
-                  return <p class={style}>{time.diff(moment(), d)} {d}</p> })}
+                <First title="TIME 2 B WITH J" date={D} />
+                {arr.map(d => { return <p class={styleFunc(time, d)}>{time.diff(moment(), d)} {d}</p>})}
               </Tab>
             </Tabs>
 
