--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 {arr.map(d => { return <p class={styleFunc(time_two_years, d)}>{time_two_years.diff(moment(), d)} {d}</p>})}
               </Tab>
               <Tab style={{ fontSize: '1.5em' }} eventKey="tab3" title="3">
-                <First title="TIME 2 B WITH J" date={D} />
+                <First title="WITH J" date={D} />
                 {arr.map(d => { return <p class={styleFunc(time, d)}>{time.diff(moment(), d)} {d}</p>})}
               </Tab>
             </Tabs>
